test/spec/custom-page-sizes/custom-page-sizes-invalid.txt
;;; TOOL: run-interp-spec
;;; ARGS*: --enable-custom-page-sizes --enable-multi-memory
;;; STDIN_FILE: third_party/testsuite/proposals/custom-page-sizes/custom-page-sizes-invalid.wast
(;; STDOUT ;;;
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:3: assert_malformed passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.0.wat:1:21: error: malformed custom page size
  (memory 0 (pagesize 3))
                      ^
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:8: assert_malformed passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.1.wat:1:21: error: malformed custom page size
  (memory 0 (pagesize 0))
                      ^
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:14: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.2.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:18: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.3.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:22: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.4.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:26: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.5.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:30: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.6.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:34: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.7.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:38: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.8.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:42: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.9.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:46: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.10.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:50: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.11.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:54: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.12.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:58: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.13.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:62: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.14.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:66: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.15.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:70: assert_invalid passed:
  out/test/spec/custom-page-sizes/custom-page-sizes-invalid/custom-page-sizes-invalid.16.wasm:000000e: error: only page sizes of 1 B or 64 KiB are allowed
  000000e: error: OnMemory callback failed
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:76: assert_invalid passed:
  000000e: error: malformed memory page size
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:83: assert_malformed passed:
  000000e: error: malformed memory page size
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:104: assert_unlinkable passed:
  error: page_size mismatch in imported memory, expected 65536 but got 1.
out/test/spec/custom-page-sizes/custom-page-sizes-invalid.wast:111: assert_unlinkable passed:
  error: page_size mismatch in imported memory, expected 1 but got 65536.
22/22 tests passed.
;;; STDOUT ;;)
